Rework for the search input - transition:all; separated to separate rules transitions - moved styles to critical to prevent page jumping during the loading

--- a/_css/components/header/google-search-placeholder.pcss
+++ b/_css/components/header/google-search-placeholder.pcss
@@ -38,7 +38,9 @@
     width: 110px;
     max-width: 250px;
     border-radius: 10em;
-    transition: all .5s;
+
+    --transition-time: .5s;
+    transition: width var(--transition-time), border-color var(--transition-time), box-shadow var(--transition-time);
   }
 
   & input[type=search]:focus {
